# GradeInator

GradeInator/: README.md  mix.exs
GradeInator/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
GradeInator/lib/: grade_inator.ex  grade_inator_web.ex
GradeInator/lib/grade_inator/: application.ex  assignment_list.ex  mailer.ex  repo.ex  submission_list.ex
GradeInator/lib/grade_inator/assignment_list/: assignment.ex  assignment_score.ex  assignment_score_type.ex  required_outputs.ex  required_submission_files.ex
GradeInator/lib/grade_inator/course/: group.ex  submission.ex  submission_score.ex  submission_state.ex  time.ex  user.ex
GradeInator/lib/grade_inator_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
GradeInator/lib/grade_inator_web/components/: core_components.ex  layouts.ex
GradeInator/lib/grade_inator_web/controllers/: auth_controller.ex  auth_html.ex  download_submission_controller.ex  error_html.ex  error_json.ex  page_controller.ex  page_html.ex
GradeInator/priv/repo/: seeds.exs
GradeInator/priv/repo/migrations/: 20230416104933_create_assignments.exs  20230416104935_assignment_scores.exs  20230420202600_create_groups.exs  20230420202601_create_users.exs  20230420203632_create_submission_states.exs  20230420204255_create_submissions.exs  20230420204259_create_submission_scores.exs  (+1 more)
GradeInator/test/: test_helper.exs
GradeInator/test/grade_inator/: assignment_list_test.exs  submission_list_test.exs
GradeInator/test/support/: conn_case.ex  data_case.ex
assessor/: Cargo.toml
assessor/src/: main.rs
(+24 files in other folders)
