[package]
name = "grader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
mysql = "23.0.1"
serde = { version = "1.0.163", features = ["serde_derive", "derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
wait-timeout = "0.2.0"
